--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -1,8 +1,7 @@
 
 header#header {
-   max-width: 1280px;
-   margin: 0 auto;
-    
+
+    background: #1C2B35;
 }
 
 
@@ -24,7 +23,9 @@ header#header {
 }
 
 nav.nav {
-    width: 100vw;
+    max-width: 97%;
+    margin: 0 auto;
+    
 }
 
 .header_menu li{
