--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color-scheme: light dark; */
   
 
   font-synthesis: none;
@@ -25,10 +29,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  
  
 }
-
+*{
+  margin: 0;
+  padding: 0;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -53,15 +60,4 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
